// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
  data-test-subj="test subject string"
>
  <a
    class="euiLink euiLink--primary euiBreadcrumb customClass euiBreadcrumb--first"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <a
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--first"
    type="button"
  >
    Animals
  </button>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    ⋯
  </div>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 2 items 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--first"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    ⋯
  </div>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 3 items 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--first"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiBreadcrumb euiBreadcrumb--collapsed"
  >
    ⋯
  </div>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props render a popover is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--first"
    type="button"
  >
    Animals
  </button>
  <div
    class="euiPopover euiPopover--anchorDownCenter"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show all breadcrumbs"
        class="euiBadge euiBadge-isClickable euiBadge--iconLeft euiBadge--default euiBreadcrumb euiBreadcrumb__collapsedBadge"
        title="View hidden breadcrumbs"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            ⋯
          </span>
        </span>
      </button>
    </div>
  </div>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--first"
    type="button"
  >
    Animals
  </button>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--responsive"
>
  <button
    class="euiLink euiLink--primary euiBreadcrumb euiBreadcrumb--first"
    type="button"
  >
    Animals
  </button>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <button
    class="euiLink euiLink--primary euiBreadcrumb"
    type="button"
  >
    Boa constrictor
  </button>
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;
